--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.14",
         "vite": "^5.0"
     }
 }
